@@ -11,6 +11,7 @@ import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 
 import java.util.Collections;
+import java.util.Set;
 
 @Configuration
 public class WebSecurityConfig extends WebSecurityConfigurerAdapter {
@@ -23,7 +24,7 @@ public class WebSecurityConfig extends WebSecurityConfigurerAdapter {
     @Override
     protected void configure(AuthenticationManagerBuilder auth) throws Exception {
 
-        User userAdmin = new User("Jan", getPasswordEncoder().encode("Jan123"), Collections.singleton(new SimpleGrantedAuthority("ROLE_ADMIN")));
+        User userAdmin = new User("Jan", getPasswordEncoder().encode("Jan123"), Set.of(new SimpleGrantedAuthority("ROLE_ADMIN"), new SimpleGrantedAuthority("ROLE_USER")));
 
         User userUser = new User("Karol", getPasswordEncoder().encode("Karol123"), Collections.singleton(new SimpleGrantedAuthority("ROLE_USER")));
 
@@ -35,7 +36,11 @@ public class WebSecurityConfig extends WebSecurityConfigurerAdapter {
     protected void configure(HttpSecurity http) throws Exception {
         http.authorizeRequests()
                 .antMatchers("/forAdmin").hasRole("ADMIN")
-                .antMatchers("/forUser").hasRole("USER");
+                .antMatchers("/forUser").hasRole("USER")
+                .and()
+                .formLogin().permitAll()
+                .and()
+                .logout().logoutSuccessUrl("/forAll");
 
     }
 }
